# sediment-palace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  start.bat
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md
docs/en/: README.md  agent-quickstart.md
docs/en/user/: 01-getting-started.md  02-daily-workflows.md  03-tools-reference.md  04-troubleshooting.md  05-faq.md  06-mcp-config-examples.md  README.md
docs/ru/: README.md
docs/ru/user/: 01-getting-started.md  (+6 more)
docs/user/: 01-getting-started.md  02-daily-workflows.md  03-tools-reference.md  04-troubleshooting.md  05-faq.md  06-mcp-config-examples.md  README.md
idea/: main.md
project/: AGENT_WORK_RULES.md  API.md  ARCHITECTURE_AND_STACK.md  DELIVERY_PLAN.md  PROJECT_OVERVIEW.md  PROMPT_BACKEND.md  PROMPT_DEVOPS.md  PROMPT_FRONTEND.md  STATUS.md
project/adr/: 0000-template.md  0001-modular-monolith-boundaries.md  0002-file-native-plus-operation-journal.md  0003-testing-and-quality-gates.md  README.md
src/sediment_palace/: config.py  main.py
src/sediment_palace_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
start/: README.md  init_memory.ps1  init_memory.py  start.bat
tests/: conftest.py
tests/e2e/: test_server_flow.py
tests/integration/: test_filesystem_repository.py
tests/property/: test_metabolize_properties.py
tests/unit/: test_config.py  test_frontmatter.py
(+23 files in other folders)
